[package]
name = "vm2-cep-78-enhanced-nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
casper-macros = { git = "https://github.com/mpapierski/casper-node", branch = "vm2" }
casper-sdk = { git = "https://github.com/mpapierski/casper-node", branch = "vm2" }
borsh = { version = "1.2.0", features = ["derive", "unstable__schema"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
