[package]
name = "vm2-cep-78-enhanced-nft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
casper-macros = { git = "https://github.com/mpapierski/casper-node", branch = "vm2" }
casper-sdk = { git = "https://github.com/mpapierski/casper-node", branch = "vm2" }
borsh = { version = "1.2.0", features = ["derive", "unstable__schema"] }
base16 = { version = "0.2.1", default-features = false, features = ["alloc"] }
serde = { version = "1.0.80", default-features = false }
serde_json = { version = "1.0.59", default-features = false }
serde-json-wasm = { version = "0.5.1", default-features = false }
blake2b_simd = { version = "1.0.2", default-features = false }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
